--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,6 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('junit:junit:4.12')
-    testCompile('org.mockito:mockito-all:1.10.19')
+    compile('org.mockito:mockito-all:1.10.19')
 
 }
